tests/invalid/connect-provider-for-ephemeral.pkl
/// Provider modes: an ephemeral resource requires a provider that
/// supports "create"; a connect-only provider must be rejected.
module tests.invalid.connectProviderForEphemeral

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../support/testkit.pkl"

res: resource.EphemeralResource = new {
  name = "res"
  provider = new testkit.TestConnectProvider { provides { "bash" } }
}

h: host.Host = new { name = "h"; backedBy = res }

j: job.Job = new {
  name = "j"
  runsOn = h
  actions {
    new testkit.TestAction { name = "a"; requires { "bash" } }
  }
}

wf {
  name = "bad"
  resources { res }
  hosts { h }
  jobs { j }
}
